add ppo_atari and associated requirements

--- a/p1/requirements.txt
+++ b/p1/requirements.txt
@@ -1,7 +1,9 @@
+ale-py
 einops
-gymnasium[classic_control]
+gymnasium[classic_control,atari,other]
 matplotlib
 numpy
 pandas
+stable-baselines3
 torch
 tqdm
